tests/misc_testsuite/missing-atomics.wast
(assert_invalid (module (memory 1 1 shared)) "threads must be enabled for shared memories")
